--- a/202001096.md
+++ b/202001096.md
@@ -1,14 +1,14 @@
 # Lab-1_202001096
 
-1)  Identifying Functional and Non-Functional Requirements
+# 1) 
 
----> FUNCTIONAL REQUIRMENTS 
+# FUNCTIONAL REQUIRMENTS 
 
 We must have a librarian account for manage a system.
 Books must be available.
 A web application (using the recent HTML 5), which should run only within the institute LAN.
 
-Librarian's Functions
+* Librarian's Functions
 
 ->Add a new book/article
 ->Delete a book/article
@@ -19,7 +19,7 @@ Librarian's Functions
 ->set the permission for user
 
 
-LIS members's Functions
+* LIS members's Functions
 
 ->Authentication 
   User must authenticated before accessing system.
@@ -36,30 +36,52 @@ LIS members's Functions
 ->Enable to extend the date
   Enabling a user to extend the date of his borrowing if no other booking for perticular book hase been made.
  
-NON LIS members's Functions
+* NON LIS members's Functions
 
 ->search
   User must be able to search the books or articles.
   
 
 
----> NON FUNCTIONAL REQUIRMENTS
+# NON FUNCTIONAL REQUIRMENTS
 
-->Safety Requirements
+* Safety Requirements
   1>The software shoould be portable so moving from one OS to another OS does not create any problem.
   2>The database may get crashed at any certain time due to virus or operating system failure. Therefore it is required to take the database backup.
   
-->Security Requirements
+* Security Requirements
   1>We are going to develop a secured database for the university .There are different categories of users namely teaching staff, administrator, library staff,students     etc. all other users other than librarian only have the rights to retrieve the information about database.
   2>NO confidential information(like password) is stored in plain text.
   
-->Software Quality Attributes
+* Software Quality Attributes
   1>The processing of each request should be done within 20 sec.
   2>A website should be capable to handle enough traffic for a university.
   3>A website should reload it information in every 15 min. 
  
-->Hardware Constraints
+* Hardware Constraints
   1>The system requires a database in order to store persistent data. The database should have backup capabilities.
   
   
-  
+ ----------------------------------------------------------------------------------------------------------------------------------------------------------------------
+# 2)
+# Mobile application to aid hear loss:
+
+* Scope
+We are making a android application for a disabled peeple who are suffered from disabling hearing loss. We are creating a application using a Artifficial Intelligence software which recognises basic key sound and give information or alert to the user.
+
+* Features:
+
+->The App should alert the users when it recognizes the sounds of critical situations.
+->The predictions of theThis Mobile application should use Artificial Intelligence to detect sounds. App should be very accurate.
+->This app should use Artificial Intelligence to detect sounds.
+->The App should consume less power and should have little latency. 
+->This app gives immidiate alert to the user when it detect the sound
+->Notify family in case when no response from the user when any danger situation is detected
+
+* NON Functional aspects
+ 
+->This app is optimised for andriod with the latency of the app should be less than 3 seconds.
+->The app should run continuously so that an imidiate alert can be sent
+->The App should alert the user through some vibrations.
+->The app should be able to track the live location of users that can be sent to friends and family in emergency situations.
+
